@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.14-dev
 
+improve the same_interpreter framework to handle response failures
+while trying to init and later find out the same interpreter. [Stas]
+
 make sure that 'make distclean' cleans all the autogenerated files
 [Stas]
 
